package io.hedwig.dp.demos.structural.bridge;

/**
 * 1. author: patrick
 */
public class AImplementor implements Implementor {

  @Override
  public void operationImpl() {
    System.out.println("A implementor!");
  }
}
