package io.hedwig.dp.demos.structural.bridge;

/**
 * 1. author: patrick
 */
public class BImplementor implements Implementor {

  @Override
  public void operationImpl() {
    System.out.println("B implementor!");
  }
}
